CSS tweaks with the menu to help resolve some menu/content overlap issues.
llvm-svn: 52255

--- a/clang/www/content.css
+++ b/clang/www/content.css
@@ -1,6 +1,6 @@
 html, body {
   padding:0px;	
-  font: 12px/18px "Lucida Grande", "Lucida Sans Unicode", Arial, Verdana, sans-serif; background-color: #fff; color: #222;
+  font: 12px/18px "Lucida Grande", "Lucida Sans Unicode", Arial, Verdana, Helvetica, sans-serif; background-color: #fff; color: #222;
 }
 
 h1, h2, h3, tt { color: #000; }
