--- a/clang/www/menu.css
+++ b/clang/www/menu.css
@@ -4,11 +4,13 @@
 
 [id=menu] {
 	position:fixed;
+	width:25ex;
 }
 [id=content] {
 	/* *****  EDIT THIS VALUE IF CONTENT OVERLAPS MENU ***** */
-	padding-left:25ex;
-	padding-right:5ex;
+	position:absolute;
+  left:29ex;
+	padding-right:4ex;
 }
 
 /**************/
